Edited report upto results section, need to add value iteration segment and work from results

--- a/STOR609_report_draft_4.ipynb
+++ b/STOR609_report_draft_4.ipynb
@@ -23,11 +23,11 @@
    "id": "c3edc1ed-30a3-49df-a4d3-912d497861c9",
    "metadata": {},
    "source": [
-    "Pig is a turn based jeopardy dice game over a number of rounds. Players may roll any number of times, scoring the cumulative sum of the numbers rolled, with the jeopardy condition that if a player rolls a $1$ then their round score is zero. The game continues until either player attains a score of at least $100$.\n",
+    "Pig is a turn-based jeopardy multiplayer dice game. Players may roll any number of times of their choice, scoring the cumulative sum of the numbers rolled, with the jeopardy condition that if a player rolls a $1$ then their round score is zero. The game continues until either player attains a score of at least $100$.\n",
     "\n",
-    "The aim of this package and notebook is to constitute a replication study of the findings on the optimal play of the game Pig published in the journal UMAP (Neller and Presser, 2004). That is, to provide substantial evidence for replication of the original results in the article. Neller and Presser claim to apply Value Iteration to the game of Pig, and produce several figures illustrating an optimal policy for playing the game. \n",
+    "The aim of this package and notebook is to constitute a replication study of the findings on the optimal play of the game Pig published in the journal UMAP (Neller and Presser, 2004). That is, to provide substantial evidence for replication of the original results in the article. Neller and Presser claim to apply Value Iteration to find an optimal strategy for the game of Pig, and produce several figures and results illustrating an optimal policy for playing the game. \n",
     "\n",
-    "We reproduce all figures relating to the optimal policy in the original article, rigorously describe the methodology from which they are derived, and provide our original source code as an open source package and repository.\n",
+    "In this notebook, we aim to reproduce all figures and results relating to the optimal policy in the original article, rigorously describe the methodology from which they are derived, compare our findings with those provided in the original article, and provide our original source code as an open source package and repository for interested readers.\n",
     "\n"
    ]
   },
@@ -44,7 +44,7 @@
    "id": "9e993f51-aaea-457c-b924-0feedb8b0d8f",
    "metadata": {},
    "source": [
-    "In this section we give a detailed account of our notation and application of the Value Iteration formalism to reproduce the results of Neller and Pressers article. We also describe instances where these were different from those described in the paper. "
+    "In this section we give a detailed account of our notation and application of the Value Iteration formalism to reproduce the results of the article by Neller and Presser (2004). We also describe instances where these were different from those described in the paper. "
    ]
   },
   {
@@ -60,7 +60,9 @@
    "id": "829feff5-789a-4a94-b816-0c86f1c3d671",
    "metadata": {},
    "source": [
-    "The game of Piglet is a simplification of the game of Pig discussed in the paper involving flipping a coin instead of rolling a die, where the coin landing on heads or tails would score $1$ and $0$ respectively. This game is only studied in the case when the goal or winning condition is a score of $2$. "
+    "The game of Piglet is a simplification of the game of Pig discussed in the paper involving flipping a coin instead of rolling a die. In Piglet, the player accumulates 1 point for each head that is flipped until they hold. Similar to Pig, if a tail is flipped, then 0 points are accumulated in the given turn of the player. So, flipping a tail in Piglet is equivalent to rolling a $1$ in pig. In general, the game ends when the first player has a total score above a target (e.g., 10). In the paper by Neller and Presser (2004), Piglet is only studied in the case when the goal or winning condition is a total score of $2$. \n",
+    "\n",
+    "Following the paper, we adopt a methodology where we consider states, actions and rewards in the game. The goal here is to find an optimal action at each stage (state) of the game, such that we can optimise the probability of winning the game (reward)."
    ]
   },
   {
@@ -69,9 +71,11 @@
    "metadata": {},
    "source": [
     "#### 2.1.1 States\n",
-    "Following the paper, we can define the states as $3$-tuples, $(i, \\ j, \\ k)$, where $i$ is the current score, $j$ is the current score of the opponent and $k$ is the current turn score of the player. Neller and Presser state 'winning and losing states are terminal', however by their own reasoning utilising the symmetry, we need only consider consider a single further 'winning' state $(W, \\ L, \\ 0)$. The states are then,\n",
+    "Following the paper, we can define the states as $3$-tuples, $(i, \\ j, \\ k)$, where $i$ is the score of the player, $j$ is the score of the opponent, and $k$ is the current turn score of the player. Neller and Presser (2004) state 'winning and losing states are terminal'. We set the winning states to be all states such that $i+k>2$, since 2 is the goal. Winning states are denoted by $(\\text{Win}, \\text{Lose}, 0)$. Losing states are denoted by $(\\text{Lose}, \\text{Win}, 0)$. Thus, we have the set of states\n",
     "\n",
-    "$$S = \\{ (i, \\ j, \\ k) : i, \\ j, \\ k \\in \\{0,1\\}, \\  i+k <2 \\} \\cup \\{(W, \\ L, \\ 0)\\}.$$"
+    "$$S = \\{ (i, \\ j, \\ k) : i, \\ j, \\ k \\in \\{0,1\\}, \\  i+k <2 \\} \\cup \\{(W, \\ L, \\ 0), (L, \\ W, \\ 0)\\}.$$\n",
+    "--- c ---\n",
+    "<!-- , however by their own reasoning utilising the symmetry, we need only consider consider a single further 'winning' state $(W, \\ L, \\ 0)$. The states are then, -->"
    ]
   },
   {
@@ -81,7 +85,7 @@
    "source": [
     "#### 2.1.2 Actions\n",
     "\n",
-    "The actions $A$ in the game of Piglet are whether to flip or not, $A=\\{\\text{flip},\\text{hold}\\}$.\n"
+    "The actions $A$ in the game of Piglet are whether to flip the coin or not, $A=\\{\\text{flip},\\text{hold}\\}$.\n"
    ]
   },
   {
@@ -91,23 +95,23 @@
    "source": [
     "#### 2.1.3 Transitions\n",
     "\n",
-    "There are three types of transitions that we consider.\n",
+    "There are three types of transitions that we consider. Suppose the current player is at state $s = (i, j, k)$ and we transition to state $s' if we choose action $a$.\n",
     "\n",
     "##### (i)\n",
-    "When the action is to **flip** and the outcome is **heads** with probability $\\frac{1}{2}$, and the transition is given by:\n",
-    "$$(i, \\ j, \\ k) \\  \\mapsto \\ \\begin{cases} (i, \\ j, \\ k+1) &\\text{ if }k+1<2 \\\\\n",
+    "When the action $a$ is to **flip** and the outcome is **heads** with probability $\\frac{1}{2}$, the turn score increases by 1 and the transition is given by:\n",
+    "$$(i, \\ j, \\ k) \\  \\mapsto \\ \\begin{cases} (i, \\ j, \\ k+1) &\\text{ if }i+k+1<2 \\\\\n",
     "(W, \\ L, \\ 0) &\\text{ otherwise.}\\end{cases}$$\n",
     "\n",
     "##### (ii)\n",
-    "When the action is to **flip** and the outcome is **tails** with probability $\\frac{1}{2}$, and the transition is given by:\n",
+    "When the action $a$ is to **flip** and the outcome is **tails** with probability $\\frac{1}{2}$, the current player loses the turn score and it becomes the opponent's turn. The transition is given by:\n",
     "$$(i, \\ j, \\ k) \\mapsto (j, \\  i, \\ 0). $$\n",
     "\n",
     "##### (iii)\n",
     "\n",
-    "Finally, if the action is to **hold** then with probability $1$ the transition is given by:\n",
+    "Finally, if the action $a$ is to **hold** then it becomes the opponent's turn and with probability $1$, the transition is given by:\n",
     "$$(i, \\  j,  \\ k) \\mapsto (j, \\ i+k, \\ 0).$$\n",
     "\n",
-    "Transitions (ii) and (iii) utilise symmetry. Our probability of winning the game is the probability that the opponent does not win after having lost, or having held on the previous turn. However, as the opponent is also assumed to be playing optimally, we need only consider winning in this opposing state from our point of view, and existing list of states, as if we were the opponent. \n"
+    "Transitions (ii) and (iii) utilise symmetry of the game as each players has the same choices and probable outcomes (Neller and Presser, 2004). In both transitions, states $s'$ indicate that it is the opponent's turn. Hence, our probability of winning the game at state $s$ is the probability that the opponent does not win beginning the next turn at state $s'$. However, as the opponent is also assumed to be playing optimally, we need only consider winning in this opposing state from our point of view, and existing list of states, as if we were the opponent. \n"
    ]
   },
   {
@@ -117,9 +121,9 @@
    "source": [
     "#### 2.1.4 Rewards\n",
     "\n",
-    "We award a reward of $1$ for any transition from a non-winning state to the winning state, and $0$ otherwise. \n",
+    "We award a reward of $1$ for any transition from a non-winning state $s$ to a winning state $s'$, and $0$ otherwise. \n",
     "\n",
-    "$$R_{ss'}^{a} = \\begin{cases} 1 &\\text{ if }s=(i, \\ j, \\ k), \\ s'=(W, \\ L, \\ 0), \\text{ where } a=\\text{flip} \\text { and }i+k<2  \\\\\n",
+    "$$R_{ss'}^{a} = \\begin{cases} 1 &\\text{ if }s=(i, \\ j, \\ k), \\ s'=(W, \\ L, \\ 0), \\text{ where } i+k<2  \\\\\n",
     "                         0 &\\text{ otherwise.}\\end{cases}$$"
    ]
   },
@@ -128,15 +132,19 @@
    "id": "fe698a92-6d73-4067-971b-e1c15d658158",
    "metadata": {},
    "source": [
-    "#### 2.1.5 Iteration\n",
+    "#### 2.1.5 Value Iteration\n",
     "\n",
-    "As in the paper, we conflate probability of winning from a given state and the value of that state, taking $P_{(i, \\ j, \\ k)} = V( (i, \\ j, \\ k) ).$ In our implementation we directly solve the $6$ equations for $P_{s}$ with $s\\in S\\setminus \\{(W,\\ L, \\ 0)\\}$.\n",
+    "As in the paper, we conflate probability of winning from a given state $(i, j, k)$ and the value of that state, taking $P_{(i, \\ j, \\ k)} = V( (i, \\ j, \\ k) ).$ Here, we find that since there are two actions to choose from, \n",
+    "\n",
+    "$$P_{i, j, k} = \\max \\left\\{ P_{i, j, k, \\text{flip}}, P_{i, j, k, \\text{hold}} \\right\\}.$$\n",
+    "\n",
+    "In our implementation we directly solve the $6$ equations for $P_{s}$ with $s\\in S\\setminus \\{(W,\\ L, \\ 0), (L, \\ W, \\ 0)\\}$, given by\n",
     "\n",
     "$$P_{(i, \\ j, \\ k)} = \\max \\left\\{ \\overbrace{\\frac{1}{2}\\left[\\left( 1-{P}_{(j, \\ i, \\ 0)} \\right) + P_{(i, \\ j, \\ k+1)}\\right]}^{a = \\text{flip}}, \\overbrace{1- P_{(j, \\ i+k, \\ 0)}}^{a= \\text{hold}} \\right\\}. $$\n",
     "\n",
-    "Taking $P_{(1,0,1)}=P_{(1,1,1)}=1$ if the flip increments the player score. These are equivalent to equations (1) in the paper (pg 28, Neller and Presser, 2004).\n",
+    "Taking $P_{(1,0,1)}=P_{(1,1,1)}=P_{(0,0,2)}=P_{(0,1,2)}=P_{(W, \\ L, \\ 0)}=1$ if the flip increments the player score. These are equivalent to equations (1) in the paper (pg 28, Neller and Presser, 2004).\n",
     "\n",
-    "Initially we took the values $P_{s} = 0, \\forall s\\in S\\setminus \\{(W,\\ L, \\ 0)\\}$, and $P_{(W,L,0)} = 1$. Initial iterations were tabulated by hand, and are displayed here for completeness.\n",
+    "Initially we took the values $P_{s} = 0, \\forall s\\in S\\setminus \\{(W,\\ L, \\ 0)\\}$, $P_{(W,L,0)} = 1$ (and $P_{(L, W, 0)} = 0$). Initial iterations were tabulated by hand, and are displayed here for completeness.\n",
     "\n",
     "\n"
    ]
@@ -167,7 +175,7 @@
    "id": "4ee8d3f9-fc15-4732-a297-92a023224f60",
    "metadata": {},
    "source": [
-    "Our methodology for finding the optimal policy for the game of pig is similar to that of piglet in section 2.1."
+    "Our methodology for finding the optimal policy for the game of Pig is similar to that of Piglet in section 2.1. Here, we assume the target score (or goal) is 100 in order to win the game."
    ]
   },
   {
@@ -177,9 +185,9 @@
    "source": [
     "#### 2.2.1 States\n",
     "\n",
-    "Again we can define the states as $3$-tuples, $(i, \\ j, \\ k)$, where $i$ is the current score, $j$ is the current score of the opponent and $k$ is the current turn score of the player, in addition to two further 'winning' and 'losing' states $(W, \\ L, \\ 0)$ and $(L, \\ W, \\ 0)$. We include the extra state for completeness, though it is not essential to obtain the results. The states $S$ are given by,\n",
+    "Again, we can define the states as $3$-tuples, $(i, \\ j, \\ k)$, where $i$ is the current score, $j$ is the current score of the opponent, and $k$ is the current turn score of the player, in addition to two further 'winning' and 'losing' states: $(W, \\ L, \\ 0)$ and $(L, \\ W, \\ 0)$. We include the losing state as a terminal state for completeness, though it is not essential to obtain the results. The states $S$ are given by,\n",
     "\n",
-    "$$S = \\{ (i, \\ j, \\ k) : i, \\ j, \\ k \\in \\{0,1\\}, \\  i+k < 100 \\} \\cup \\{(W, \\ L, \\ 0)\\}\\cup \\{(L, \\ W, \\ 0)\\}.$$"
+    "$$S = \\{ (i, \\ j, \\ k) : 0 \\leq i, \\ j, \\ k \\leq 99, \\  i+k < 100 \\} \\cup \\{(W, \\ L, \\ 0)\\}\\cup \\{(L, \\ W, \\ 0)\\}.$$"
    ]
   },
   {
@@ -189,7 +197,7 @@
    "source": [
     "#### 2.2.2 Actions\n",
     "\n",
-    "The actions $A$ in the game of pig answer the question of whether to roll or not to roll. That is $A=\\left\\{ \\text{roll}, \\ \\text{hold} \\right\\}.$"
+    "The actions $A$ in the game of Pig answer the question of whether to roll or not to roll. That is $A=\\left\\{ \\text{roll}, \\ \\text{hold} \\right\\}.$"
    ]
   },
   {
@@ -199,11 +207,11 @@
    "source": [
     "#### 2.2.3 Transitions\n",
     "\n",
-    "There are three types of transitions that we consider.\n",
+    "There are three types of transitions that we consider from state $s = (i, j, k)$ to state $s'$.\n",
     "\n",
     "##### (i)\n",
     "When the action is to **roll**, the outcome is $r = \\{2,3,\\ldots\\}$ with probability $\\frac{1}{6}$, and the transition is given by:\n",
-    "$$(i, \\ j, \\ k) \\  \\mapsto \\ \\begin{cases} (i, \\ j, \\ k+r) &\\text{ if }k+r<100 \\\\\n",
+    "$$(i, \\ j, \\ k) \\  \\mapsto \\ \\begin{cases} (i, \\ j, \\ k+r) &\\text{ if }i+k+r<100 \\\\\n",
     "(W, \\ L, \\ 0) &\\text{ otherwise.}\\end{cases}$$\n",
     "\n",
     "##### (ii)\n",
@@ -212,7 +220,7 @@
     "\n",
     "##### (iii)\n",
     "\n",
-    "Finally, if the action is to **hold** then with probability $1$ the transition is given by:\n",
+    "Finally, if the action is to **hold** then with probability $1$, and the transition is given by:\n",
     "$$(i, \\  j,  \\ k) \\mapsto (j, \\ i+k, \\ 0).$$\n"
    ]
   },
@@ -223,9 +231,9 @@
    "source": [
     "#### 2.2.4 Rewards\n",
     "\n",
-    "We award a reward of $1$ for any transition from a non-winning state to the winning state, and $0$ otherwise. \n",
+    "We award a reward of $1$ for any transition from a non-winning state $s = (i, j, k)$ to a winning state $s' = (W, \\ L, \\ 0)$, and $0$ otherwise. \n",
     "\n",
-    "$$R_{ss'}^{a} = \\begin{cases} 1 &\\text{ if }s=(i, \\ j, \\ k), \\ s'=(W, \\ L, \\ 0), \\text{ where } a=\\text{roll,} \\text { and }i+k<100  \\\\\n",
+    "$$R_{ss'}^{a} = \\begin{cases} 1 &\\text{ if }s=(i, \\ j, \\ k), \\ s'=(W, \\ L, \\ 0), \\text{ where } i+k<100  \\\\\n",
     "                         0 &\\text{ otherwise.}\\end{cases}$$"
    ]
   },
@@ -236,7 +244,7 @@
    "source": [
     "#### 2.2.5 Iteration\n",
     "\n",
-    "Again we take $P_{(i, \\ j, \\ k)} = V( (i, \\ j, \\ k) ).$ In our implementation we directly solve the $6$ equations for $P_{s}$ with $s\\in S\\setminus \\{(W,\\ L, \\ 0)\\}$.\n",
+    "Again we take $P_{(i, \\ j, \\ k)} = V( (i, \\ j, \\ k) ).$ In our implementation we directly solve the equations for $P_{s}$ with $s\\in S\\setminus \\{(W,\\ L, \\ 0)\\}$.\n",
     "\n",
     "$$P_{(i, \\ j, \\ k)} = \\max \\left\\{ \\overbrace{\\frac{1}{6}\\left[\\left( 1-{P}_{(j, \\ i, \\ 0)} \\right) + P_{(i, \\ j, \\ k+2)}+ P_{(i, \\ j, \\ k+3)}+ \\ldots + P_{(i, \\ j, \\ k+6)}\\right]}^{a = \\text{roll}}, \\overbrace{1- P_{(j, \\ i+k, \\ 0)}}^{a= \\text{hold}} \\right\\}. $$\n",
     "\n",
@@ -255,7 +263,7 @@
     "| $\\vdots$ | $\\vdots$ | $\\vdots$ |\n",
     "| $i=99$ | $k\\geq 1$ | $99$ |\n",
     "\n",
-    "The number of choices for $k$ is then the sum of the last column $1+2+\\cdots+99 = \\frac{99\\times 100}{2}$. Further in each case there is a choice of $j$, and so the total number of equations is,\n",
+    "The number of choices for $k$ is then the sum of the last column $1+2+\\cdots+99 = \\frac{99\\times 100}{2}$. Further in each case there is a choice of $0 \\leq j \\leq 99$, and so the total number of equations is,\n",
     "\n",
     "$$100^3 - \\frac{99\\times 100}{2}\\times 100 = 505,000. $$"
    ]
