Presentation column hotfix

--- a/Quarto Presentation/Presentation_draft.qmd
+++ b/Quarto Presentation/Presentation_draft.qmd
@@ -17,14 +17,13 @@ theme: sky
 -   We found that the figures of winning percentages were different from those in the paper.
 
 
-## Code output (Figure 7)
+## Code output (Figure 7) {.smaller}
 
-:::: {.columns}
+:::: {.columns} 
+::: {.column width="40%"} 
 - Figure 7 shows contours of different winning probabilities computed from the optimal policy.
 - We draw a contour wherein the states have a win probability that is within a threshold $t$ from the desired probability, e.g. in the interval $x\% \pm t$.
 - The thresholds selected were manually selected for each of the $4$ probabilities in order to yield smooth surfaces.
-::: {.column width="40%"}
-- 
 :::
 
 ::: {.column width="60%"}
