oops revealjs needed

--- a/Quarto Presentation/Presentation_draft3.qmd
+++ b/Quarto Presentation/Presentation_draft3.qmd
@@ -9,7 +9,7 @@ author:
     - Malcolm Connolly 
     - Rebekah Fearnhead
     - Niharika Peddinenikalva
-format: pptx
+format: revealjs
 transition: slide
 incremental: true
 theme: simple
